--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calendarium",
   "version": "1.0.0",
   "description": "",
+  "type":"module",
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -10,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
